--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 
             <!-- Desktop links -->
             <div class="hidden md:flex items-center gap-10 text-xs font-medium tracking-[0.15em] uppercase">
-                <a href="#listings"
+                <a href="#"
                     class="navlink relative text-white/80 hover:text-white transition after:absolute after:-bottom-1 after:left-0 after:h-[1.5px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-full">BUY</a>
-                <a href="#areas"
+                <a href="#"
                     class="navlink relative text-white/80 hover:text-white transition after:absolute after:-bottom-1 after:left-0 after:h-[1.5px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-full">RENT</a>
-                <a href="#lifestyle"
+                <a href="#"
                     class="navlink relative text-white/80 hover:text-white transition after:absolute after:-bottom-1 after:left-0 after:h-[1.5px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-full">ABOUT
                     US</a>
-                <a href="#inspiration"
+                <a href="#"
                     class="navlink relative text-white/80 hover:text-white transition after:absolute after:-bottom-1 after:left-0 after:h-[1.5px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-full">PROPERTY
                     VALUATION</a>
             </div>
@@ -83,10 +83,10 @@
          bg-transparent backdrop-blur-0 backdrop-brightness-100 backdrop-saturate-100">
             <div
                 class="max-w-7xl mx-auto px-6 lg:px-12 py-3 flex flex-col gap-3 text-[13px] font-medium tracking-[0.14em] uppercase">
-                <a class="block text-white/90 hover:text-white navlink" href="#listings">BUY</a>
-                <a class="block text-white/90 hover:text-white navlink" href="#areas">RENT</a>
-                <a class="block text-white/90 hover:text-white navlink" href="#lifestyle">ABOUT US</a>
-                <a class="block text-white/90 hover:text-white navlink" href="#inspiration">PROPERTY VALUATION</a>
+                <a class="block text-white/90 hover:text-white navlink" href="#">BUY</a>
+                <a class="block text-white/90 hover:text-white navlink" href="#">RENT</a>
+                <a class="block text-white/90 hover:text-white navlink" href="#">ABOUT US</a>
+                <a class="block text-white/90 hover:text-white navlink" href="#">PROPERTY VALUATION</a>
             </div>
         </div>
     </nav>
