Add target blank

--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                 © <span id="year"></span> Rodrigo Jordan
             </span>
             <span class="mt-2 sm:mt-0">
-                Developed by <a href="https://github.com/msfonrouge" class="hover:text-white">msfonrouge</a>
+                Developed by <a href="https://github.com/msfonrouge" target="_blank" class="hover:text-white">msfonrouge</a>
             </span>
         </div>
     </footer>
