--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <!-- optional but nice on Android’s address bar color -->
     <meta name="theme-color" content="#0b0b0b">
-    <title>Uriburu 1000, Boating Club, San Isidro, Buenos Aires</title>
+    <title>Uriburu 1000, Boating Club, San Isidro, Buenos Aires - Rodrigo Jordan</title>
     <meta name="description"
         content="Uriburu 1000 – 5 bedrooms, 6 bathrooms, 1,250 m² total area in Boating Club, San Isidro. Schedule a visit.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta property="og:title" content="Uriburu 1000, Boating Club, San Isidro, Buenos Aires">
+    <meta property="og:title" content="Uriburu 1000, Boating Club, San Isidro, Buenos Aires - Rodrigo Jordan">
     <meta property="og:description" content="Luxury property with 5 bedrooms, 6 bathrooms and 1,250 m² total area.">
     <meta property="og:image"
         content="https://imgar.zonapropcdn.com/avisos/resize/1/00/56/78/20/20/1200x1200/1990169640.jpg">
