--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <!-- Rent -->
                         <div class="text-center">
                             <div class="text-[11px] uppercase tracking-[0.18em] text-neutral-500">Rent Price</div>
-                            <div class="mt-1 font-heading text-3xl sm:text-4xl text-neutral-900">USD 5.500 <span
+                            <div class="mt-1 font-heading text-3xl sm:text-4xl text-neutral-900">USD 17.000 <span
                                     class="text-neutral-500 text-xl align-middle">/ month</span></div>
                         </div>
                     </div>
@@ -864,9 +864,10 @@
                 © <span id="year"></span> Rodrigo Jordan
             </span>
             <span class="mt-2 sm:mt-0">
-                Developed by <a href="https://github.com/msfonrouge" target="_blank" class="hover:text-white">msfonrouge</a>
+                Developed by <a href="https://github.com/msfonrouge" target="_blank"
+                    class="hover:text-white">msfonrouge</a>
             </span>
-        </div>
+            </div>
     </footer>
 
     <script>
